[gd_scene load_steps=20 format=3 uid="uid://c5r88x7enciwu"]

[ext_resource type="Script" path="res://object/Cell.gd" id="1_s7duc"]
[ext_resource type="Texture2D" uid="uid://bu20s8lkvi871" path="res://assets/map_textures/wall.png" id="2_r7qwt"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fb8ub"]
load_path = "res://.godot/imported/floor.png-b88d092708d30081daa9d4bb85467b22.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_upfoa"]
albedo_texture = SubResource("CompressedTexture2D_fb8ub")

[sub_resource type="PlaneMesh" id="PlaneMesh_b1p7m"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("StandardMaterial3D_upfoa")
flip_faces = true
uv2_padding = 0.0
size = Vector2(1, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fd2tu"]
points = PackedVector3Array(0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, -0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, 0.507937, 0.00793651, -0.507937, 0.507937, -0.00793651, 0.507937)

[sub_resource type="QuadMesh" id="QuadMesh_6udr8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_62rb7"]
albedo_texture = ExtResource("2_r7qwt")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w12s1"]
points = PackedVector3Array(-0.507937, -0.507937, -0.00793651, 0.507937, 0.507937, 0.00793651, 0.507937, 0.507937, -0.00793651, -0.507937, 0.507937, 0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651)

[sub_resource type="QuadMesh" id="QuadMesh_vborg"]
flip_faces = true

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_w4jct"]
points = PackedVector3Array(-0.507937, -0.507937, -0.00793651, 0.507937, 0.507937, 0.00793651, 0.507937, 0.507937, -0.00793651, -0.507937, 0.507937, 0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651)

[sub_resource type="QuadMesh" id="QuadMesh_mt75p"]
flip_faces = true

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_p8kar"]
points = PackedVector3Array(-0.507937, -0.507937, -0.00793651, 0.507937, 0.507937, 0.00793651, 0.507937, 0.507937, -0.00793651, -0.507937, 0.507937, 0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651)

[sub_resource type="QuadMesh" id="QuadMesh_28t1q"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_b6fog"]
points = PackedVector3Array(-0.507937, -0.507937, -0.00793651, 0.507937, 0.507937, 0.00793651, 0.507937, 0.507937, -0.00793651, -0.507937, 0.507937, 0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y5x3r"]
load_path = "res://.godot/imported/floor.png-b88d092708d30081daa9d4bb85467b22.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rfrdm"]
albedo_texture = SubResource("CompressedTexture2D_y5x3r")

[sub_resource type="PlaneMesh" id="PlaneMesh_c787h"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("StandardMaterial3D_rfrdm")
uv2_padding = 0.0
size = Vector2(1, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_kwr8a"]
points = PackedVector3Array(0.507937, 0.00793651, 0.507937, -0.507937, -0.00793651, -0.507937, -0.507937, 0.00793651, -0.507937, 0.507937, -0.00793651, -0.507937, -0.507937, -0.00793651, 0.507937, -0.507937, 0.00793651, 0.507937, 0.507937, 0.00793651, -0.507937, 0.507937, -0.00793651, 0.507937)

[node name="Cell" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.420825, 1.57741, 0.264095)
script = ExtResource("1_s7duc")

[node name="Ceiling" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0512086, 0.962259, 0.0500138)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129943, -0.236193, 0.272235)
mesh = SubResource("PlaneMesh_b1p7m")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129943, -0.236193, 0.272235)
shape = SubResource("ConvexPolygonShape3D_fd2tu")

[node name="WallEast" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.082, 0.224, -0.14961)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WallEast"]
mesh = SubResource("QuadMesh_6udr8")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_62rb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallEast"]
shape = SubResource("ConvexPolygonShape3D_w12s1")

[node name="WallWest" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.082, 0.224, 0.811262)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WallWest"]
mesh = SubResource("QuadMesh_vborg")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_62rb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallWest"]
shape = SubResource("ConvexPolygonShape3D_w4jct")

[node name="WallNorth" type="StaticBody3D" parent="."]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.409736, 0.224, 0.328996)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WallNorth"]
mesh = SubResource("QuadMesh_mt75p")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_62rb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallNorth"]
shape = SubResource("ConvexPolygonShape3D_p8kar")

[node name="WallSouth" type="StaticBody3D" parent="."]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0.550164, 0.224, 0.328996)

[node name="MeshInstance3D" type="MeshInstance3D" parent="WallSouth"]
mesh = SubResource("QuadMesh_28t1q")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_62rb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WallSouth"]
shape = SubResource("ConvexPolygonShape3D_b6fog")

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0512086, -0.0214798, 0.0500138)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129943, -0.236193, 0.272235)
mesh = SubResource("PlaneMesh_c787h")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.129943, -0.236193, 0.272235)
shape = SubResource("ConvexPolygonShape3D_kwr8a")
